# amax_gen

./: BufferUtils.hpp  CMakeLists.txt  asm.cmake  codegen.py  hipblaslt_float8.h  main.cpp
